--- a/frontend/src/scss/_colors.scss
+++ b/frontend/src/scss/_colors.scss
@@ -10,10 +10,38 @@
     --black: #1c2237;
     --white: #edf0f6;
 
-    --accent-lavender: #7F6CFE;
-    --accent-lavender-darck: #5F4AE5;
+    --accent-lavender: #7f6cfe;
+    --accent-lavender-darck: #5f4ae5;
 
-    --error-dark: #EA636D;
-    
+    --error-dark: #ea636d;
+    --error-light: #ffb5ba;
 
+    /* secondary accent colors */
+
+    --sea: #1b85a7;
+    --light-sea: #b7edfe;
+
+    --orange: #e27b42;
+    --light-orange: #ffc3a1;
+
+    --red: #ea636d;
+    --light-red: #ffb5ba;
+
+    --turquoise: #008e7d;
+    --light-turquoise: #bfe9df;
+
+    --yellow: #ffda1d;
+    --light-yellow: #ffe185;
+
+    --green: #26a911;
+    --light-green: #bcffa4;
+
+    --violet: #874dd6;
+    --light-violet: #d3b2ff;
+
+    --pink: #c7497e;
+    --light-pink: #ffd4e6;
+
+    --blue: #4c91ff;
+    --light-blue: #d3e8ff;
 }
