added-new-components

--- a/frontend/src/scss/_colors.scss
+++ b/frontend/src/scss/_colors.scss
@@ -1,14 +1,14 @@
 :root {
     --bg-medium-black: #232a45;
-    --bg-white: #ffffff;
+    --white: #ffffff;
 
     --stroke-gray: #5e6789;
-    --stroke-light-gray: #edf0f6;
+    --light-gray: #edf0f6;
+    --prime-gray: #99a1b1;
 
     --subtext: #b6b6b6;
 
     --black: #1c2237;
-    --white: #edf0f6;
 
     --accent-lavender: #7f6cfe;
     --accent-lavender-darck: #5f4ae5;
