--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,24 +1,163 @@
 @import './scss/reset';
 @import './scss/fonts.scss';
 @import './scss/colors.scss';
+@import './scss/buttons';
 
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
+    font-family: SFProDisplay;
+    font-weight: 500;
+}
+#app-container {
+    // width: 100vw;
+    // height: 100vh;
+    height: 100%;
+    padding: 0 70px 35px;
+    background: var(--light-gray);
 }
 
 .field {
-  display: flex;
+    display: flex;
 
-  &-input {
-    padding: 10px;
-    border: 1px solid var(--stroke-light-gray);
-    transition: border-radius .5s ease-in-out, border-color .5s ease-in-out, box-shadow .5s ease-in-out;
+    &-input {
+        padding: 10px;
+        border: 1px solid var(--stroke-light-gray);
+        transition: border-radius 0.5s ease-in-out, border-color 0.5s ease-in-out,
+            box-shadow 0.5s ease-in-out;
 
-    &:focus,
-    &:hover {
-      border-radius: 10px;
-      border-color: #99A1B1;
-      box-shadow: 2px 2px 15px 0px rgba(18, 52, 121, 0.12);
+        &:focus,
+        &:hover {
+            border-radius: 10px;
+            border-color: #99a1b1;
+            box-shadow: 2px 2px 15px 0px rgba(18, 52, 121, 0.12);
+        }
     }
-  }
 }
+
+.container {
+    display: grid;
+    grid-template-columns: 200px 1fr;
+    column-gap: 20px;
+    width: 100%;
+    height: 100%;
+
+    .right-side {
+        padding-top: 15px;
+        display: grid;
+        grid-template-rows: 235px 1fr;
+        row-gap: 20px;
+        &__top {
+        }
+        &__top-content {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 40px;
+        }
+        &__top-account {
+            display: flex;
+            flex-direction: column;
+            align-items: self-end;
+            justify-content: space-between;
+        }
+        &__top-management {
+            display: flex;
+            flex-direction: column;
+            position: relative;
+            .primary-button {
+                width: 160px;
+                height: 50px;
+                margin: -13px 0 0 auto;
+            }
+        }
+    }
+    .right-side__content-layout {
+        display: grid;
+        grid-template-columns: 310px 420px 310px;
+        grid-template-rows: repeat(2, 350px);
+        row-gap: 20px;
+        column-gap: 20px;
+    }
+}
+
+//тестовый круг
+.pieContainer {
+    height: 174px;
+    width: 174px;
+    position: relative;
+    margin: 0 auto 20px auto;
+  }
+  
+  .pieBackground {
+    position: absolute;
+    width: 174px;
+    height: 174px;
+    border-radius: 100%;
+    box-shadow: 0px 0px 8px rgba(0,0,0,0.5);
+  } 
+  
+  .pie {
+    transition: all 1s;
+    position: absolute;
+    width: 174px;
+    height: 174px;
+    border-radius: 100%;
+    clip: rect(0px, calc(174px / 2), 174px, 0px);
+  }
+  
+  .hold {
+    position: absolute;
+    width: 174px;
+    height: 174px;
+    border-radius: 100%;
+    clip: rect(0px, 174px, 174px, calc(174px / 2));
+  }
+  
+  #pieSlice1 .pie {
+    background-color: #1b458b;
+    transform:rotate(30deg);
+  }
+  
+  #pieSlice2 {
+    transform: rotate(30deg);
+  }
+  
+  #pieSlice2 .pie {
+    background-color: #0a0;
+    transform: rotate(60deg);
+  }
+  
+  #pieSlice3 {
+    transform: rotate(90deg);
+  }
+  
+  #pieSlice3 .pie {
+    background-color: #f80;
+    transform: rotate(120deg);
+  }
+  
+  #pieSlice4 {
+    transform: rotate(210deg);
+  }
+  
+  #pieSlice4 .pie {
+    background-color: #08f;
+    transform: rotate(10deg);
+  }
+  
+  #pieSlice5 {
+    transform: rotate(220deg);
+  }
+  
+  #pieSlice5 .pie {
+    background-color: #a04;
+    transform: rotate(70deg);
+  }
+  
+  #pieSlice6 {
+    transform: rotate(290deg);
+  }
+  
+  #pieSlice6 .pie {
+    background-color: #ffd700;
+    transform: rotate(70deg);
+  }
