--- a/frontend/src/scss/_fonts.scss
+++ b/frontend/src/scss/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'SFProDisplay';
-    src: url('SFProDisplay-Semibold.woff') format('woff');
+    src: url('/fonts/SFProDisplay-Semibold.woff') format('woff');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: 'SFProDisplay';
-    src: url('SFProDisplay-Light.woff') format('woff');
+    src: url('/fonts/SFProDisplay-Light.woff') format('woff');
     font-weight: 200;
     font-style: normal;
     font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
     font-family: 'SFProDisplay';
-    src: url('SFProDisplay-Medium.woff') format('woff');
+    src: url('/fonts/SFProDisplay-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -24,7 +24,7 @@
 
 @font-face {
     font-family: 'SFProDisplay';
-    src: url('SFProDisplay-Regular.woff') format('woff');
+    src: url('/fonts/SFProDisplay-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
