--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -7,10 +7,13 @@ html {
     scroll-behavior: smooth;
     font-family: SFProDisplay;
     font-weight: 500;
+    height: 100dvh;
+    width: 100%;
+}
+body {
+    height: 100%;
 }
 #app-container {
-    // width: 100vw;
-    // height: 100vh;
     height: 100%;
     padding: 0 70px 35px;
     background: var(--light-gray);
@@ -71,9 +74,10 @@ html {
         }
     }
     .right-side__content-layout {
+        height: calc(100% - 20px);
         display: grid;
-        grid-template-columns: 310px 420px 310px;
-        grid-template-rows: repeat(2, 350px);
+        grid-template-columns: 30% auto 30%;
+        grid-template-rows: repeat(2, 50%);
         row-gap: 20px;
         column-gap: 20px;
     }
