--- a/frontend/src/components/CircularStructure/CircularStructure.module.scss
+++ b/frontend/src/components/CircularStructure/CircularStructure.module.scss
@@ -2,10 +2,10 @@
 
 .circularStructure {
     width: 100%;
-    height: 350px;
+    height: 100%;
     padding: 20px 18px 20px 10px;
     border-radius: 20px;
-    box-shadow: 0px 9px 16px 0px rgba(18, 52, 121, 0.15);
+    box-shadow: var(--shadow);
     background: var(--white);
     position: relative;
     grid-row: 1 / span 1;
