--- a/frontend/src/components/LastEntries/LastEntries.module.scss
+++ b/frontend/src/components/LastEntries/LastEntries.module.scss
@@ -7,7 +7,7 @@
     align-items: flex-start;
     padding: 20px 20px 27px;
     border-radius: 20px;
-    box-shadow: 0px 9px 16px 0px rgba(18, 52, 121, 0.15);
+    box-shadow: var(--shadow);
     background: var(--white);
     grid-row: 1 / span 2;
     .title {
