--- a/frontend/src/components/MyAccount/MyAccount.module.scss
+++ b/frontend/src/components/MyAccount/MyAccount.module.scss
@@ -4,7 +4,7 @@
     justify-content: space-between;
     width: 277px;
     padding: 15px 20px;
-    box-shadow: 0px 9px 16px 0px rgba(18, 52, 121, 0.15);
+    box-shadow: var(--shadow);
     border-radius: 50px;
     background: var(--white);
     .avatar {
