--- a/frontend/src/components/MyCards/MyCards.module.scss
+++ b/frontend/src/components/MyCards/MyCards.module.scss
@@ -1,6 +1,6 @@
 .myCards {
     border-radius: 20px;
-    box-shadow: 0px 9px 16px 0px rgba(18, 52, 121, 0.15);
+    box-shadow: var(--shadow);
     background: var(--white);
     width: 600px;
     padding: 15px;
