--- a/frontend/src/components/ShoppingList/ShoppingList.module.scss
+++ b/frontend/src/components/ShoppingList/ShoppingList.module.scss
@@ -4,7 +4,7 @@
     height: 100%;
     padding: 20px 16px 57px;
     border-radius: 20px;
-    box-shadow: 0px 9px 16px 0px rgba(18, 52, 121, 0.15);
+    box-shadow: var(--shadow);
     background: var(--white);
     grid-row: 2 / span 1;
     position: relative;
