--- a/frontend/src/components/SideBar/SideBar.module.scss
+++ b/frontend/src/components/SideBar/SideBar.module.scss
@@ -1,9 +1,9 @@
 .sideBar {
     padding: 70px 0 50px 20px;
-    width: 200px;
+    width: 100%;
     height: 100%;
     border-radius: 0px 0px 20px 20px;
-    box-shadow: 0px 9px 16px 0px rgba(18, 52, 121, 0.15);
+    box-shadow: var(--shadow);
     background: var(--white);
     display: flex;
     flex-direction: column;
