added login page & refac

--- a/frontend/src/scss/_colors.scss
+++ b/frontend/src/scss/_colors.scss
@@ -11,7 +11,7 @@
     --black: #1c2237;
 
     --accent-lavender: #7f6cfe;
-    --accent-lavender-darck: #5f4ae5;
+    --accent-lavender-dark: #5f4ae5;
 
     --error-dark: #ea636d;
     --error-light: #ffb5ba;
