--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,7 +1,8 @@
 @import './scss/reset';
 @import './scss/fonts.scss';
 @import './scss/colors.scss';
-@import './scss/buttons';
+// @import './scss/buttons';
+@import './scss/typography';
 
 html {
     scroll-behavior: smooth;
@@ -18,7 +19,10 @@ body {
     padding: 0 70px 35px;
     background: var(--light-gray);
 }
-
+#app {
+    background: var(--light-gray);
+    height: 100%;
+}
 .field {
     display: flex;
 
