--- a/frontend/src/pages/LoginPage/LoginPage.module.scss
+++ b/frontend/src/pages/LoginPage/LoginPage.module.scss
@@ -1,6 +1,6 @@
-@import '../../scss/typography';
-@import '../../scss/UIKit/inputs';
-@import '../../scss/UIKit/buttons';
+@import '../../app/scss/typography';
+@import '../../app/scss/UIKit/inputs';
+@import '../../app/scss/UIKit/buttons';
 
 .loginPage {
     width: 100%;
@@ -9,7 +9,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0 20px;
     .formWrapper {
+        position: relative;
+        overflow: hidden;
         width: 430px;
         border-radius: 20px;
         padding: 37px 55px;
@@ -77,5 +80,114 @@
     .registrationButton {
         @include button-with-border;
         width: 100%;
+    }
+    .preloaderWrapper {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background-color: rgba(255, 255, 255, 70%);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        user-select: none;
+        .preloader {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+        .preloaderCoin {
+            width: 50px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 20px;
+            color: #f7f336;
+            border-radius: 50%;
+            border: 5px solid #f7b253;
+            background-color: #f7ce5a;
+            animation: bounceCoin 0.5s linear infinite;
+        }
+        .preloaderLine {
+            width: 50px;
+            height: 5px;
+            background-color: var(--prime-gray);
+            border-radius: 3px;
+        }
+    }
+    .message {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border-radius: 15px;
+        padding: 20px 10px;
+        color: var(--white);
+        bottom: 5%;
+        right: 5%;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+        &.active {
+            opacity: 1;
+            visibility: visible;
+        }
+        &.errorMessage {
+            background-color: var(--error-dark);
+        }
+        &.successMessage {
+            background-color: var(--violet);
+        }
+        .closeMessage {
+            width: 20px;
+            height: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            top: -10px;
+            &:before,
+            &::after {
+                content: '';
+                position: absolute;
+                width: 15px;
+                height: 2px;
+                background-color: var(--white);
+            }
+            &::before {
+                transform: rotate(45deg);
+            }
+            &::after {
+                transform: rotate(-45deg);
+            }
+        }
+        .messageText{
+            font-size: 14px;
+            margin-right: 20px;
+        }
+    }
+}
+@keyframes bounceCoin {
+    0% {
+        transform: translate3d(0, 0px, 0);
+        width: 50px;
+    }
+    50% {
+        transform: translate3d(0, -10px, 0);
+        width: 50px;
+    }
+    75% {
+        transform: translate3d(0, 0px, 0);
+        width: 55px;
+    }
+    85% {
+        width: 60px;
+    }
+    100% {
+        width: 50px;
     }
 }
