--- a/frontend/src/pages/LoginPage/LoginPage.module.scss
+++ b/frontend/src/pages/LoginPage/LoginPage.module.scss
@@ -3,6 +3,7 @@
 @import '../../app/scss/UIKit/buttons';
 
 .loginPage {
+    position: relative;
     width: 100%;
     height: 100%;
     max-height: 100vh;
@@ -10,6 +11,7 @@
     align-items: center;
     justify-content: center;
     padding: 0 20px;
+    overflow: hidden;
     .formWrapper {
         position: relative;
         overflow: hidden;
@@ -126,20 +128,23 @@
         justify-content: space-between;
         border-radius: 15px;
         padding: 20px 10px;
-        color: var(--white);
         bottom: 5%;
         right: 5%;
         opacity: 0;
         visibility: hidden;
-        transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+        transform: translateY(100vh);
+        transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out, transform 0.3s ease-in-out;
         &.active {
             opacity: 1;
             visibility: visible;
+            transform: translateY(0);
         }
         &.errorMessage {
+            color: var(--white);
             background-color: var(--error-dark);
         }
         &.successMessage {
+            color: var(--white);
             background-color: var(--violet);
         }
         .closeMessage {
@@ -165,7 +170,7 @@
                 transform: rotate(-45deg);
             }
         }
-        .messageText{
+        .messageText {
             font-size: 14px;
             margin-right: 20px;
         }
