--- a/frontend/src/app/scss/_colors.scss
+++ b/frontend/src/app/scss/_colors.scss
@@ -12,6 +12,7 @@
 
     --accent-lavender: #7f6cfe;
     --accent-lavender-dark: #5f4ae5;
+    --border-lavender: #6656d1;
 
     --error-dark: #ea636d;
     --error-light: #ffb5ba;
@@ -46,4 +47,5 @@
     --light-blue: #d3e8ff;
 
     --shadow: 0 9px 16px 0 rgba(18, 52, 121, 0.15);
+    --thumb-color: rgba($color: #000, $alpha: 0.2);
 }
