--- a/frontend/src/app/App.scss
+++ b/frontend/src/app/App.scss
@@ -14,18 +14,44 @@ html {
 body {
     height: 100%;
 }
+.container {
+    height: calc((100% - 145px) - 40px);
+}
 #app-container {
     background: var(--light-gray);
-}
-#app {
-    background: var(--light-gray);
     height: 100%;
+    max-height: 100vh;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 70px 35px;
+    .header {
+        height: 130px;
+        padding-top: 15px;
+        display: flex;
+        justify-content: space-between;
+        box-sizing: content-box;
+        // background: var(--light-gray);
+        // position: sticky;
+        // top: 0;
+        &__right {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            #theme-btn{
+                margin-bottom: 15px;
+            }
+        }
+    }
+    .content-side {
+        width: calc(100% - 220px);
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
 }
-.primary-button {
-    width: 160px;
-    height: 50px;
-    margin: -13px 0 0 auto;
-}
+
+
 .field {
     display: flex;
 
