--- a/frontend/src/app/scss/_typography.scss
+++ b/frontend/src/app/scss/_typography.scss
@@ -27,3 +27,10 @@
     font-size: 16px;
     line-height: 120%;
 }
+
+@mixin title-info-card {
+    color: var(--black);
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 120%;
+}
