--- a/frontend/src/widgets/BudgetLimits/BudgetLimits.module.scss
+++ b/frontend/src/widgets/BudgetLimits/BudgetLimits.module.scss
@@ -1,7 +1,12 @@
 @import '../../app/scss/mixins';
+@import '../../app/scss/typography';
 
 .budgetLimits {
-    padding: 10px 20px 20px 10px;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    padding: 20px 5px 30px 0px;
     position: relative;
     background: var(--white);
     border-radius: 20px;
@@ -13,13 +18,17 @@
     }
     .editButton {
         position: absolute;
-        top: 10px;
+        top: 20px;
         right: 20px;
         width: 30px;
         height: 30px;
-        background: var(--light-gray);
-        background: url(../../assets/img/edit-button.svg) center/100% no-repeat;
-        border-radius: 50%;
+    }
+    .scrollableBlock {
+        width: 100%;
+        height: 100%;
+        padding-left: 20px;
+        padding-right: 10px;
+        @include scrollbar;
     }
     .budgetList {
         .item {
