--- a/frontend/src/widgets/LastEntries/LastEntries.module.scss
+++ b/frontend/src/widgets/LastEntries/LastEntries.module.scss
@@ -1,19 +1,29 @@
 @import '../../app/scss/mixins';
+@import '../../app/scss/typography';
 
 .lastEntries {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 20px 20px 27px;
+    padding: 20px 5px 30px 0;
     border-radius: 20px;
     box-shadow: var(--shadow);
     background: var(--white);
-    grid-row: 1 / span 2;
+
     .title {
         @include title-info-card;
         margin-bottom: 30px;
         margin: 0 auto 30px auto;
+    }
+    .scrollableBlock {
+        width: 100%;
+        height: 100%;
+        padding-left: 20px;
+        padding-right: 10px;
+        margin-bottom: 20px;
+        @include scrollbar;
     }
     .dateBox {
         width: 100%;
@@ -36,14 +46,17 @@
         display: flex;
         align-items: center;
         margin-bottom: 5px;
-        width: calc(100% + 20px);
+        width: calc(100% + 10px);
         margin-left: -10px;
+        padding: 5px 10px;
+        border-radius: 10px;
         cursor: pointer;
         transition: border-radius 0.3s ease-in-out, box-shadow 0.3s ease-in-out,
             padding 0.3s ease-in-out, transform 0.3s ease-in-out;
         will-change: box-shadow;
-        padding: 5px 10px;
-        border-radius: 10px;
+        &:last-child{
+            margin-bottom: 0;
+        }
         &:hover {
             box-shadow: 2px 2px 15px 0px rgba(18, 52, 121, 0.12);
             .editButton {
@@ -87,15 +100,13 @@
                 color: var(--green);
             }
         }
-        .editButton {
-            width: 0px;
+        .editButton{
+            width: 0;
             height: 25px;
-            margin-left: 0;
-            opacity: 0;
-            visibility: hidden;
-            background: url(../../assets/img/edit-button.svg) center/100% no-repeat;
-            transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out,
-                width 0.3s ease-in-out, matgin-left 0.3s ease-in-out;
         }
+    }
+    .showMoreEntries{
+        width: 90px;
+        margin: 0 auto;
     }
 }
