--- a/frontend/src/widgets/ShoppingList/ShoppingList.module.scss
+++ b/frontend/src/widgets/ShoppingList/ShoppingList.module.scss
@@ -1,36 +1,42 @@
 @import '../../app/scss/mixins';
+@import '../../app/scss/typography';
 .shoppingList {
     width: 100%;
     height: 100%;
-    padding: 20px 16px 57px;
+    padding: 20px 5px 30px 0;
     border-radius: 20px;
     box-shadow: var(--shadow);
     background: var(--white);
-    grid-row: 2 / span 1;
     position: relative;
+    display: flex;
+    flex-direction: column;
     .title {
         @include title-info-card;
-        margin-bottom: 20px;
+        margin-bottom: 30px;
         text-align: center;
     }
     .editButton {
         position: absolute;
         top: 20px;
-        right: 16px;
+        right: 15px;
         width: 30px;
         height: 30px;
-        background: var(--light-gray);
-        background: url(../../assets/img/edit-button.svg) center/100% no-repeat;
-        border-radius: 50%;
     }
     .list {
-        margin-bottom: -10px;
+        width: 100%;
+        height: 100%;
+        padding-left: 15px;
+        padding-right: 5px;
+        @include scrollbar;
         .item {
             display: flex;
             align-items: center;
             padding: 5px 0;
             border-bottom: 1px solid var(--light-gray);
             margin-bottom: 10px;
+            &:last-child{
+                margin-bottom: 0;
+            }
             .itemInfo {
                 display: flex;
                 align-items: center;
@@ -62,7 +68,7 @@
                 }
 
                 .itemText {
-                    width: 115px;
+                    width: 90px;
                     margin-right: 10px;
                     .itemTitle {
                         color: var(--black);
