--- a/frontend/src/widgets/ThemeToggle/ThemeToggle.module.scss
+++ b/frontend/src/widgets/ThemeToggle/ThemeToggle.module.scss
@@ -6,6 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    box-shadow: var(--shadow);
     .darkMode,
     .lightMode {
         display: block;
