--- a/frontend/src/pages/HomePage/HomePage.module.scss
+++ b/frontend/src/pages/HomePage/HomePage.module.scss
@@ -1,46 +1,3 @@
-.container {
-    display: grid;
-    grid-template-columns: 200px 1fr;
-    column-gap: 20px;
-    width: 100%;
-    height: 100%;
-    padding: 0 70px 35px;
-
-    .rightSide {
-        padding-top: 15px;
-        display: grid;
-        grid-template-rows: 235px 1fr;
-        row-gap: 20px;
-        .rightSideTop {
-        }
-        .rightSideInfo {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 40px;
-            height: 130px;
-        }
-        .rightSideAccount {
-            display: flex;
-            flex-direction: column;
-            align-items: self-end;
-            justify-content: space-between;
-        }
-        .rightSideManagement {
-            display: flex;
-            flex-direction: column;
-            position: relative;
-        }
-    }
-    .rightSideContentLayout {
-        height: calc(100%);
-        display: grid;
-        grid-template-columns: 30% auto 30%;
-        grid-template-rows: repeat(2, minmax(100px, 50%));
-        row-gap: 20px;
-        column-gap: 20px;
-    }
-}
-
 .homePage {
     display: flex;
     flex-direction: column;
@@ -58,19 +15,16 @@
         display: flex;
         justify-content: space-between;
         height: calc((100% - 65px) - 20px);
-        // .lastEntriesSection,
-        // .shopListSection,
-        // .budgetLimitsSection {
-        //     width: calc((100% / 3) - (40px / 3));
-        // }
         .mainBlocks {
             display: flex;
             justify-content: space-between;
             width: calc(70% - 10px);
             .lastEntriesSection,
             .shopListSection {
+                position: relative;
                 width: calc((100% / 2) - 10px);
             }
+            
         }
         .widgets {
             width: calc(30% - 10px);
@@ -78,11 +32,16 @@
             flex-direction: column;
             justify-content: space-between;
             .budgetLimitsSection {
+                position: relative;
                 height: calc(50% - 10px);
             }
             .tragetsSection {
+                position: relative;
                 height: calc(50% - 10px);
             }
+        }
+        .blocksSkeleton {
+            border-radius: 20px;
         }
     }
 }
