--- a/frontend/src/widgets/LastEntries/LastEntries.module.scss
+++ b/frontend/src/widgets/LastEntries/LastEntries.module.scss
@@ -23,6 +23,7 @@
         padding-left: 20px;
         padding-right: 10px;
         margin-bottom: 20px;
+        position: relative;
         @include scrollbar;
     }
     .dateBox {
