--- a/frontend/src/widgets/MyAccount/MyAccount.module.scss
+++ b/frontend/src/widgets/MyAccount/MyAccount.module.scss
@@ -3,10 +3,17 @@
     align-items: center;
     justify-content: space-between;
     width: 277px;
+    min-height: 70px;
     padding: 15px 20px;
     box-shadow: var(--shadow);
     border-radius: 50px;
     background: var(--white);
+    position: relative;
+    .myAccountSkeleton{
+        top: 0;
+        left: 0;
+        border-radius: 50px;
+    }
     .avatar {
         width: 40px;
         height: 40px;
