--- a/frontend/src/widgets/MyCards/MyCards.module.scss
+++ b/frontend/src/widgets/MyCards/MyCards.module.scss
@@ -2,9 +2,16 @@
     border-radius: 20px;
     box-shadow: var(--shadow);
     background: var(--white);
-    width: 600px;
+    max-width: 600px;
+    min-width: 250px;
     padding: 15px;
     display: flex;
+    position: relative;
+    .cardsSkeleton{
+        top: 0;
+        left: 0;
+        border-radius: 20px;
+    }
     .card {
         width: 160px;
         padding: 10px;
